# InvoiceSS

./: .env.example  .gitignore  .supabase-app-db-password  INVOICE_SAAS_PREPROD_TODO.md  README.md  docker-compose.yml  package-lock.json  project_status.md  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/billing/: routes.py
backend/app/core/: config.py  security.py
backend/app/db/: bootstrap.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/extraction/: base.py  mock_provider.py  pdf_text_provider.py  providers.py  textract_provider.py
backend/app/invoices/: __init__.py  exports.py  normalization.py  routes.py  schemas.py  service.py  validation.py
backend/app/storage/: __init__.py  base.py  local.py  supabase_storage.py
backend/app/workers/: process_invoice.py  queue.py
backend/invoice_saas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_workflow.py  test_normalization_validation.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  auth-guard.tsx  invoice-preview.tsx  invoice-review-form.tsx  status-badge.tsx  upload-dropzone.tsx
frontend/lib/: api.ts  formatting.ts  (+1 more)
samples/: generate_sample_pdf.py  sample-invoice.txt
supabase/: app-db-role.sql  app-schema.sql  config.toml  rls.sql  storage-policies.sql
(+9 files in other folders)
