[project]
name = "invoice-saas-backend"
version = "0.1.0"
description = "FastAPI backend for the invoice extraction SaaS MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openpyxl>=3.1.5",
  "psycopg[binary]>=3.2.0",
  "PyJWT>=2.10.0",
  "pydantic-settings>=2.8.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.18",
  "redis>=5.2.0",
  "rq>=2.0.0",
  "sqlalchemy>=2.0.36",
  "stripe>=11.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
